--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -2,18 +2,27 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>URL Shortner</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css">
 </head>
 <body>
-  <div class="ui inverted segment center aligned">
+  <div class="ui segment center aligned">
     <div class="ui stackable grid">
       <div class="row">
-        <div class="sixteen wide column">
+        <div class="three wide column left aligned">
+          <h2>Shorty</h2>
+        </div>
+        <div class="eight wide column center aligned">
           <div class="ui input">
             <input type="text" name="url" id="longURL" placeholder="Enter the URL to be shortened">
           </div>
           <button type="submit" name="button" class="ui primary button" id="shortenBtn">Shorten</button>
+        </div>
+        <div class="five wide column">
+          <div class="ui input">
+            <input type="text" name="" value="" disabled=true id="shortenedURL">
+          </div>
+          <button type="button" name="button" class="ui labeled copy button black">Copy</button>
         </div>
       </div>
     </div>
